clusters/labinfra/apps/avada-portfolio.xuperson.org/avada-portfolio-namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: avada-portfolio
  labels:
    name: avada-portfolio
    app.kubernetes.io/name: avada-portfolio
    app.kubernetes.io/managed-by: argocd
