clusters/labinfra/apps/avada-portfolio.xuperson.org/avada-portfolio-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: avada-portfolio
  namespace: avada-portfolio
  labels:
    app.kubernetes.io/name: avada-portfolio
    app.kubernetes.io/component: ingress
  annotations:
    external-dns.alpha.kubernetes.io/hostname: "avada-portfolio.xuperson.org"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/proxy-body-size: "128m"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "300"
    nginx.ingress.kubernetes.io/client-max-body-size: "128m"
spec:
  ingressClassName: nginx
  rules:
  - host: avada-portfolio.xuperson.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: wordpress
            port:
              number: 80
